--- a/modules/search.html
+++ b/modules/search.html
@@ -1,14 +1,22 @@
 <div class="p-4">
 
   <div class="bg-dark p-5" style="background-size:cover; background-position:center; background-repeat:no-repeat; background-image:url(https://images.unsplash.com/photo-1609537007960-8c67037a2379?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2551&q=80)">
-    <input class="form-control form-rounded" id="keyword" placeholder="Search" type="text">
-</div>
-    
-      <ul class="list-group text-center">
-        <li class="list-group-item">Jordans</li>
-        <li class="list-group-item">Yeezy</li>
-        <li class="list-group-item">Adidas</li>
-        <li class="list-group-item">Nike</li>
-      </ul>
-    
+  <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search.."></div>
+
+<ul id="myUL">
+  <li><a href="jordan5.html">Jordan 5</a></li>
+  <li><a href="misskickz.html">Feaured Seller</a></li>
+
+  <li><a href="article.html">Featured Item</a></li>
+  <li><a href="huarache.html">Nike</a></li>
+
+  <li><a href="ma2.html">Jordan MA2</a></li>
+  <li><a href="dunk.html">Blue Chill</a></li>
+</ul>
+
+ 
+  
+  
+  
+
     </div>
