--- a/modules/search.html
+++ b/modules/search.html
@@ -5,7 +5,7 @@
 
 <ul id="myUL">
   <li><a href="jordan5.html">Jordan 5</a></li>
-  <li><a href="misskickz.html">Feaured Seller</a></li>
+  <li><a href="misskickz.html">Featured Seller</a></li>
 
   <li><a href="article.html">Featured Item</a></li>
   <li><a href="huarache.html">Nike</a></li>
