--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <img src="https://images.unsplash.com/photo-1521093470119-a3acdc43374a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1234&q=80" class="figure-img img-fluid rounded" style="width: 100%"><p>
             <p class="text-center"><b>ONSITE</b></p>
               
-                  <p>Is an app platform where users can resell authentic and limited hype brands. A devoted space where shoe collectors can see all available listings taken from the web for the style they are looking for. A community where Sellers and Buyers can ease their worries of fake merchandise and shady Online transactions. </p>
+                  <p>Is an app platform where users can resell authentic and limited hype brands. A devoted space where shoe collectors can see all available listings of the style they are looking for. A community where Sellers and Buyers can ease their worries of fake merchandise and shady Online transactions. </p>
                 </div>
               </div>
         </div>
