--- a/modules/home.html
+++ b/modules/home.html
@@ -1,4 +1,5 @@
- <h6 class="tex-muted"> Featured Item</h6>
+<div class="p-4">
+<h6 class="tex-muted"> Featured Item</h6>
   <div class="card text-center">
     <img src="https://static.nike.com/a/images/t_prod_ss/w_640,c_limit,f_auto/5edf891c-71c1-429b-9f9b-162204f57e23/air-jordan-1-hyper-royal-release-date.jpg" class="d-block w-100" alt="...">
     
